--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="./index.html">
             <img src="./assets/logo/Bestell App- Logo.svg" alt="Bestell App Logo">
         </a>
-        <img src="./assets/img/menu_icon.png" alt="Menü" onclick="toggleMenu()" class="menu_icon">
+        <img src="./assets/icon/menu_icon.png" alt="Menü" onclick="toggleMenu()" class="menu_icon">
     </header>
     <main>
         <div id="toast">Deine Bestellung wurde ans Restaurant weitergeleitet!</div>
@@ -42,10 +42,10 @@
                 </div>
                 <div class="restaurant_info">
                     <h1>Pizza Paradies</h1>
-                    <a href="">Bewertung(4,2 von 5 Sternen)</a>
+                    <a href="">Bewertung (4,5 von 5 Sternen)</a>
                 </div>
                 <div class="selection">
-                    <img src="./assets/img/arrow.png" alt="Pfeil nach rechts">
+                    <img src="./assets/icon/arrow.png" alt="Pfeil nach rechts">
                     <p>Vorspeisen</p>
                     <p>Hauptgerichte</p>
                     <p>Desserts</p>
@@ -73,7 +73,9 @@
             <section class="basket_wrapper">
                 <div class="basket">
                     <h1>Warenkorb</h1>
-                    <div id="basket"></div>
+                    <div id="basket">
+                        <img class="test" src="./assets/img/Designer.png" alt="">
+                    </div>
                     <div>
                         <div>
                             <p>Zwischensumme</p>
