render content ready

--- a/index.html
+++ b/index.html
@@ -26,90 +26,17 @@
 </head>
 
 <body onload="init()">
-    <header id="start">
+    <header>
         <a href="./index.html">
             <img src="./assets/logo/Bestell App- Logo.svg" alt="Bestell App Logo">
         </a>
         <img src="./assets/icon/menu_icon.png" alt="Menü" onclick="toggleMenu()" class="menu_icon">
     </header>
-    <main>
-        <div id="toast">Deine Bestellung wurde ans Restaurant weitergeleitet!</div>
-        <div class="content_wrapper">
-            <section id="content" class="content">
-                <img class="pizza_oven_img" src="./assets/img/pizza_oven.jpg" alt="Pizzaofen">
-                <div class="pizza_center">
-                    <img class="round_pizza_img" src="./assets/img/limoncello_gelato.jpg" alt="Pizza">
-                </div>
-                <div class="restaurant_info">
-                    <h1>Pizza Paradies</h1>
-                    <a href="">Bewertung (4,5 von 5 Sternen)</a>
-                </div>
-                <div class="selection">
-                    <img src="./assets/icon/arrow.png" alt="Pfeil nach rechts">
-                    <a href="#appetizer">Vorspeisen</a>
-                    <a href="#main_course">Hauptgerichte</a>
-                    <a href="#desserts">Desserts</a>
-                </div>
-                <img class="food_img" src="./assets/img/carpaccio_1.jpg" alt="Vorspeisen Bild">
-                <h2 id="appetizer">Vorspeisen</h2>
-                <div id="food_container" class="food_container">
-                    <div class="food_item">
-                        <img class="inner_food_img" src="./assets/img/bruschetta.jpg" alt="Bruschetta">
-                        <div class="food_text">
-                            <h3>Pizza Krabben</h3>
-                            <p>mit Krabben und Peperoni</p>
-                            <p class="orange">9,50€</p>
-                        </div>
-                    </div>
-                    <div class="big_plus_container">
-                        <img class="big_plus" src="./assets/icon/plus.png" alt="Plus">
-                    </div>
-                </div>
-                <div id="food_container" class="food_container"></div>
-                <div id="food_container" class="food_container"></div>
-                <img class="food_img" src="./assets/img/pizza_salami.jpg" alt="Pizza Bild">
-                <h2 id="main_course">Hauptgerichte</h2>
-                <div id="food_container" class="food_container"></div>
-                <div id="food_container" class="food_container"></div>
-                <div id="food_container" class="food_container"></div>
-                <img class="food_img" src="./assets/img/cannoli.jpg" alt="Dessert Bild">
-                <h2 id="desserts">Desserts</h2>
-                <div id="food_container" class="food_container"></div>
-                <div id="food_container" class="food_container"></div>
-                <div id="food_container" class="food_container"></div>
-            </section>
-            <section class="basket_wrapper">
-                <div class="basket">
-                    <h1>Warenkorb</h1>
-                    <div id="basket" class="basket_item">
-                        <b>Pizza Placeholder</b>
-                        <div class="calc_zone">
-                            <img onclick="" class="calc_icon" src="./assets/icon/minus.png" alt="Minus">
-                            <p>3x</p>
-                            <img onclick="" class="calc_icon" src="./assets/icon/plus.png" alt="Plus">
-                            <p>25.50€</p>
-                            <img onclick="" class="trash_icon" class="test" src="./assets/icon/trash.png" alt="Papierkorb">
-                        </div>
-                    </div>
-                    <div class="sum_container">
-                        <div class="sum">
-                            <p>Zwischensumme</p>
-                            <div class="flex"><p>500</p><p>€</p></div>
-                        </div>
-                        <div class="sum">
-                            <p>Lieferkosten</p>
-                            <p>5,00€</p>
-                        </div>
-                        <div class="sum"><b>Gesamt</b>
-                            <div><b>1000</b><b>€</b></div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </div>
+    <main id="main_content">
+        
     </main>
     <footer>
-        <a href="#start">
+        <a href="./index.html">
             <img src="./assets/logo/Bestell App- Logo.svg" alt="Bestell App Logo">
         </a>
         <a href="./impressum.html">Impressum</a>
