--- a/impressum.html
+++ b/impressum.html
@@ -10,30 +10,28 @@
     <script src="./scripts/templates.js"></script>
 
     <link rel="icon" type="img/png" href="./assets/icon/a-book-1157658_1280.png">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="styles/font.css">
-    <link rel="stylesheet" href="styles/standard.css">
-    <link rel="stylesheet" href="styles/assets.css">
-    <link rel="stylesheet" href="styles/impressum.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles/font.css">
+    <link rel="stylesheet" href="./styles/standard.css">
+    <link rel="stylesheet" href="./styles/assets.css">
+    <link rel="stylesheet" href="./styles/impressum.css">
 </head>
 
 <body onload="renderImpressumContent()">
     <header>
         <a href="./index.html">
-            <img src="./assets/logo/Bestell App- Logo.svg" alt="Bestell App Logo">
+            <img id="menu_button" src="./assets/logo/Bestell App- Logo.svg" alt="Bestell App Logo">
         </a>
         <img src="./assets/icon/menu_icon.png" alt="Menü" onclick="toggleMenu()" class="menu_icon">
     </header>
-        <main id="impressum"></main>
-        <footer>
-            <div class="footer_container">
-                <a href="./impressum.html">
-                    <img src="./assets/icon/a-book-1157658_1280.png" alt="Logo">
-                </a>
-                <a href="./impressum.html">Impressum</a>
-            </div>
-        </footer>
-    
+    <main id="impressum"></main>
+    <footer>
+        <a href="./index.html">
+            <img src="./assets/logo/Bestell App- Logo.svg" alt="Bestell App Logo">
+        </a>
+        <a href="./impressum.html">Impressum</a>
+    </footer>
+
 </body>
 
 </html>
