--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Bestell App</title>
 
     <script src="./scripts/db.js"></script>
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
     <script src="./scripts/templates.js"></script>
 
     <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico">
@@ -30,10 +30,10 @@
         <a href="./index.html">
             <img src="./assets/logo/Bestell App- Logo.svg" alt="Bestell App Logo">
         </a>
-        <img src="./assets/icon/menu_icon.png" alt="Menü" onclick="toggleMenu()" class="menu_icon">
+        <img id="menu_button" src="./assets/icon/menu_icon.png" alt="Menü" class="menu_icon">
     </header>
     <main id="main_content">
-        
+
     </main>
     <footer>
         <a href="./index.html">
@@ -41,7 +41,6 @@
         </a>
         <a href="./impressum.html">Impressum</a>
     </footer>
-
 </body>
 
 </html>
