--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="./index.html">
             <img src="./assets/logo/Bestell App- Logo.svg" alt="Bestell App Logo">
         </a>
-        <img onclick="toggleClasses()" id="menu_button" src="./assets/icon/menu_icon.png" alt="Menü" class="menu_icon">
+        <img onclick="toggleBasket()" id="menu_button" src="./assets/icon/menu_icon.png" alt="Menü" class="menu_icon">
     </header>
     <main id="main_content">
 
