--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bestell App</title>
 
+    <script src="./scripts/mutationsobserver.js" defer></script>
     <script src="./scripts/db.js"></script>
     <script src="./script.js" defer></script>
     <script src="./scripts/templates.js"></script>
