--- a/reviews.html
+++ b/reviews.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Impressum</title>
+    <title>Bewertungen</title>
 
+    <script src="./scripts/db.js"></script>
     <script src="./script.js" defer></script>
+    <script src="./scripts/reviews.js"></script>
     <script src="./scripts/templates.js"></script>
 
     <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico">
@@ -23,16 +25,19 @@
     <link rel="stylesheet" href="./styles/assets.css">
     <link rel="stylesheet" href="./styles/impressum.css">
     <link rel="stylesheet" href="./styles/header_footer.css">
+    <link rel="stylesheet" href="./styles/reviews.css">
 </head>
 
-<body onload="renderImpressumContent()">
+<body onload="initReviews()">
     <header>
         <a href="./index.html">
             <img id="menu_button" src="./assets/logo/Bestell App- Logo.svg" alt="Bestell App Logo">
         </a>
         <img src="./assets/icon/menu_icon.png" alt="Menü" onclick="toggleMenu()" class="menu_icon">
     </header>
-    <main id="impressum"></main>
+    <main id="reviews_content">
+
+    </main>
     <footer>
         <a href="./index.html">
             <img src="./assets/logo/Bestell App- Logo.svg" alt="Bestell App Logo">
