--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bestell App</title>
 
-    <script src="./scripts/mutationsobserver.js" defer></script>
     <script src="./scripts/db.js"></script>
-    <script src="./script.js" defer></script>
     <script src="./scripts/templates.js"></script>
+    <script src="./scripts/utils.js"></script>
+    <script src="./scripts/mutationsobserver.js" defer></script>
+    <script src="./scripts/reviews.js"></script>
+    <script src="./script.js" defer></script>
+
 
     <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico">
 
@@ -25,6 +28,7 @@
     <link rel="stylesheet" href="./styles/cart.css">
     <link rel="stylesheet" href="./styles/assets.css">
     <link rel="stylesheet" href="./styles/header_footer.css">
+    <link rel="stylesheet" href="./styles/reviews.css">
 </head>
 
 <body onload="init()">
@@ -35,7 +39,7 @@
         <img onclick="toggleBasket()" id="menu_button" src="./assets/icon/menu_icon.png" alt="Menü" class="menu_icon">
     </header>
     <main id="main_content">
-
+        <!-- <div id="average_rating_home" class="average-rating-home"></div> -->
     </main>
     <footer>
         <a href="./index.html">
